Update chariot and Java
chariot-0.1.4
Java 22.0.1